--- a/untitled/build.gradle
+++ b/untitled/build.gradle
@@ -1,6 +1,9 @@
 plugins {
+    id 'java'
+    id 'application'
     id 'com.zeroc.gradle.ice-builder.slice' version '1.5.0' apply false
 }
+
 
 subprojects {
     //
@@ -8,15 +11,16 @@ subprojects {
     //
     apply plugin: 'java'
     apply plugin: 'com.zeroc.gradle.ice-builder.slice'
+    apply plugin: 'application'
 
     //
     // Both Client and Server projects share the Printer.ice Slice definitions
     //
-    //slice {
-    //    java {
-    //        files = [file("../Printer.ice")]
-    //    }
-    //}
+    slice {
+        java {
+            files = [file("${rootProject.projectDir}/SITM.ice")]
+        }
+    }
 
     //
     // Use Ice JAR files from maven central repository
@@ -38,7 +42,8 @@ subprojects {
     jar {
         manifest {
             attributes(
-                    "Main-Class": project.name.capitalize(),
+                    //"Main-Class": project.name.capitalize(),
+                    
                     //"Class-Path": configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' ')
                     "Class-Path": '/opt/Ice-3.7.9/lib/ice-3.7.9.jar'
             )
